Downgrade do angular 21 para versão 20 e instalação da biblioteca ng-zorro

--- a/frontend-angular/angular.json
+++ b/frontend-angular/angular.json
@@ -11,6 +11,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
+          "type": "component",
           "style": "scss"
         }
       },
@@ -28,9 +29,15 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
               }
             ],
             "styles": [
+              "src/theme.less",
               "src/styles.scss"
             ],
             "server": "src/main.server.ts",
