--- a/frontend-angular/package.json
+++ b/frontend-angular/package.json
@@ -24,27 +24,29 @@
   "private": true,
   "packageManager": "npm@11.6.2",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/platform-server": "^21.0.0",
-    "@angular/router": "^21.0.0",
-    "@angular/ssr": "^21.0.2",
+    "@angular/common": "~20.3.13",
+    "@angular/compiler": "~20.3.13",
+    "@angular/core": "~20.3.13",
+    "@angular/forms": "~20.3.13",
+    "@angular/platform-browser": "~20.3.13",
+    "@angular/platform-server": "~20.3.13",
+    "@angular/router": "~20.3.13",
+    "@angular/ssr": "~20.3.13",
     "@ngneat/tailwind": "^7.0.3",
     "express": "^5.1.0",
+    "ng-zorro-antd": "^20.4.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.2",
-    "@angular/cli": "^20.3.13",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular-devkit/build-angular": "~20.3.0",
+    "@angular/cli": "~20.3.13",
+    "@angular/compiler-cli": "~20.3.13",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "autoprefixer": "^10.4.22",
     "jsdom": "^27.1.0",
+    "less": "^4.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.9.2",
